[tool.poetry]
name = "ai4neb"
version = "0.2.11"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.4"
scipy = "^1.8.1"
tensorflow = "==2.11.1"
xgboost = "==1.7.6"
matplotlib = "^3.5.2"
scikit-learn = "==1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
